# SmartDailyReportAssistant

./: .env.example  .gitignore  README.md  README.zh-CN.md  migrate.py  pyproject.toml  update_env.py
backend/: .env.example  pyproject.toml
backend/data_source/: rss.opml
backend/prompts/: briefing_filler.txt  briefing_template.md  deduplicator.txt  diagnostor.txt  enricher_synthesis.txt  enricher_terms.txt  mindmap.txt  persona.txt  scorer.txt  slot_extractor.txt  summarizer.txt  validator.txt
backend/src/briefing/: config.py  database.py  main.py  models.py
backend/src/briefing/ai/: client.py  deduplicator.py  enricher.py  mindmap.py  prompt_loader.py  scorer.py  summarizer.py
backend/src/briefing/api/: auth.py  debug.py  routes.py
backend/src/briefing/collectors/: base.py  rss.py
backend/src/briefing/graph/: edges.py  nodes.py  state.py  workflow.py
backend/src/briefing/push/: push_throttle.py
backend/src/briefing/scheduler/: jobs.py
backend/src/briefing/tools/: __init__.py  dedup_decider.py  dedup_engine.py  dedup_retriever.py  embedding.py  memory_retriever.py  persona_matcher.py  text_cleaner.py  web_scraper.py  web_search.py
backend/src/briefing/workflow/: __init__.py  pipeline.py
docs/: V0.2版本设计文档.md  V0.3 版本需求文档.md  V0.3版本设计文档.md  需求文档.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
test/: HackerNews_front.py  github_trending.py  huggingfacedailypaper.py
tests/: test_ai_processor.py  test_collectors.py  test_contextual_summary.py  test_dingtalk_push.py  test_personalized_scorer.py  test_scheduler_jobs.py  (+1 more)
(+30 files in other folders)
