[project]
name = "briefing-generation"
version = "0.1.0"
description = "智能 AI 开发者早报系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
    "openai>=1.30.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.11",
    "listparser>=0.19.0",
    "rapidfuzz>=3.14.5",
    "trafilatura>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
